scss/elements/_base.scss
/* ... */
@media (min-width: 700px) and (max-width: 998px) {
  .info__box--circle .info__img {
    height: 250px;
  }
  .info__box--circle::before {
    height: 230px;
    width: 230px;
  }
  .info__box--rhombus .info__img {
    height: 170px;
    right: 30px;
  }
  .info__box--rhombus::before {
    height: 130px;
    width: 130px;
    left: 145px;
  }
  .pricing__boxes {
    align-items: center;
  }
  .pricing__feature {
    min-width: 150px;
  }
  .pricing__box {
    min-width: 60vw;
  }
}
@media (min-width: 999px) {
  .popular__container {
    max-width: 1100px;
    padding: 110px 0 60px;
  }
  .info__box--circle .info__img {
    height: 328px;
  }
  .info__box--circle::before {
    height: 320px;
    width: 320px;
  }
  .info__box--rhombus .info__img {
    height: 219px;
    right: 50px;
  }
  .info__box--rhombus::before {
    height: 180px;
    width: 180px;
    left: 164px;
  }
  .info__box {
    padding: 35px;
  }
  .info__box--small {
    width: 57%;
    padding: 35px;
  }
  .info__box--smalest {
    width: 38%;
  }
  .info__txt {
    width: 37%;
  }
  .pricing__boxes {
    flex-direction: row;
    justify-content: space-between;
  }
  .pricing__title {
    padding: 100px 0 50px;
  }
  .pricing__boxes--container {
    min-width: 100vw;
    padding: 0 15px 50px;
  }
  .pricing__box {
    width: 30%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .pricing__box__plan {
    padding: 38px 0;
  }
  .pricing__feature {
    padding-bottom: 81px;
    min-width: 150px;
  }
  .pricing__box.pricing__box--professional {
    width: 32%;
  }
  .pricing__box--basic,
  .pricing__box--premium {
    margin: 20px 0 75px 0;
  }
  .pricing__box--professional span.btn.professional {
    width: 165px;
  }
  .contact__box {
    display: flex;
    justify-content: space-between;
    max-width: 896px;
    margin: 0 auto;
  }
  .contact__form {
    max-width: 440px;
  }
  .contact__details {
    display: inline-block;
  }
  .hamburger {
    display: none;
  }
  .header__list {
    display: flex;
    justify-content: space-between;
    position: relative;
    top: 0;
    box-shadow: none;
    background: transparent;
    z-index: 0;
    text-align: center;
    width: fit-content;
    padding: initial;
    visibility: initial;
    opacity: 1;
  }
  .header__items {
    width: 80px;
    margin-right: 95px;
  }
  .header__items a {
    font-family: 'Open Sans', sans-serif;
    font-size: 11px;
    color: #a5a5a5;
    text-transform: uppercase;
    padding: 29px 12px 22px 12px;
    border-bottom: 4px solid #fff;
    text-decoration: none;
    white-space: nowrap;
  }
  .header__items:nth-child(4) {
    margin-right: 0;
  }
  .header__items a:hover {
    color: #000;
    border-bottom: 4px solid #08a6e4;
    padding: 29px 12px 23px 12px;
    cursor: pointer;
    font-weight: 600;
  }
}

